--- a/code/styles/components/_block.scss
+++ b/code/styles/components/_block.scss
@@ -34,6 +34,7 @@
   &__intro {
     @extend %heading-intro;
     color: $leaf-green;
+    display: block;
   }
 
   &__title {
