--- a/code/styles/components/_buckets.scss
+++ b/code/styles/components/_buckets.scss
@@ -25,7 +25,10 @@
     }
 
     &__text {
-      margin-bottom: 0;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
